# cpp-arithmetic

./: CMakeLists.txt  IDENTIFICATION.txt
app/: delaunay_triangulation.cpp  test_interval.cpp  test_kernel.cpp  triangulation_2.hpp
include/ra/: interval.hpp  kernel.hpp
